# index.js
@@ -3,6 +3,7 @@ const express = require('express');
 const cors = require('cors');
 const connectDatabase = require('./src/database/database');
 const userRoute = require('./src/users/user.route');
+const characterRoute = require('./src/characteres/character.route');
 const authRoute = require('./src/auth/auth.route');
 const swaggerRoute = require("./src/swagger/swagger.routes");
 
@@ -16,6 +17,7 @@ app.use(express.json());
 app.use("/api-docs", swaggerRoute);
 app.use("/users", userRoute);
 app.use("/auth", authRoute);
+app.use('/characters', characterRoute);
 
 
 app.listen(port, () => {console.log(`Servidor rodando na porta http://localhost:${port}`)});
