# src/users/user.route.js
@@ -1,7 +1,7 @@
 const router = require('express').Router();
 const userController = require('./user.controller');
 
-router.post('/', userController.createUserController);
+router.post('/create', userController.createUserController);
 router.get('/', userController.findAllUserController);
 
 module.exports = router;
